header section done

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* shared styles */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,4 +8,54 @@
 
   font-style: normal;
   font-variation-settings: "wdth" 100;
+}
+
+.display-flex {
+  display: flex;
+}
+.screen {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.subtitle {
+  font-size: 1.25rem;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+/* nav styles */
+.navbar {
+  align-items: center;
+  justify-content: space-between;
+}
+.nav-link {
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 400;
+  color: black;
+}
+.nav-items {
+  list-style: none;
+  gap: 40px;
+}
+#nav-link-1 {
+  font-weight: 700;
+}
+#nav-link-2 {
+  color: rgba(137, 135, 161, 1);
+}
+
+/* hero section styles */
+.hero {
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+  margin-top: 120px;
+}
+.hero-title {
+  font-size: 4rem;
+  font-weight: 700;
+}
+.hero-title span {
+  color: #e95a08;
 }
