--- a/styles/style.css
+++ b/styles/style.css
@@ -17,10 +17,23 @@
   max-width: 1140px;
   margin: 0 auto;
 }
+.title {
+  font-size: 3rem;
+  font-weight: 700;
+}
 .subtitle {
   font-size: 1.25rem;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.5);
+}
+.btn-primary {
+  color: white;
+  background-color: rgb(233, 90, 8);
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 19px 80px;
+  border: none;
+  cursor: pointer;
 }
 
 /* nav styles */
@@ -51,6 +64,7 @@
   align-items: flex-end;
   justify-content: center;
   margin-top: 120px;
+  margin-bottom: 120px;
 }
 .hero-title {
   font-size: 4rem;
@@ -58,4 +72,36 @@
 }
 .hero-title span {
   color: #e95a08;
+}
+
+/* our plants section styles */
+.our-plants-contents {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+.our-plants-contents h3 span {
+  color: #e95a08;
+}
+.our-plant-images {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin-bottom: 30px;
+}
+.flower-title {
+  font-size: 1.25rem;
+  font-weight: 500;
+  text-align: center;
+}
+.flower-subtitle {
+  font-weight: 700;
+  font-size: 1.25rem;
+  text-align: center;
+  margin-bottom: 25px;
+}
+.lily-flower-image {
+  margin-bottom: 30px;
 }
