--- a/styles/style.css
+++ b/styles/style.css
@@ -129,40 +129,89 @@
 
 /* latest deal styles */
 
+.deal-section {
+  margin-bottom: 120px;
+}
+
 .deal-contents {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: 0 125px 130px 150px;
+  margin: 0 125px 120px 150px;
 }
 .deal-contents h3 span {
   color: #e95a08;
 }
-
-/* .deals-cards {
+.deal-flex {
+  width: 1140px;
+  height: 420px;
+  gap: 20px;
   align-items: center;
   justify-content: space-between;
 }
-
-
+.mini {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
 .mini-card-1 {
-  background-image: url(../assets/deal-ana.png);
+  width: 367px;
+  height: 200px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../assets/deal-bloom.png);
+  opacity: 0.8;
+  border-radius: 20px;
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+.mini-card-1 a {
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
 }
 .mini-card-2 {
-  background-image: url(../assets/deal-bloom.png);
+  width: 367px;
+  height: 200px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../assets/deal-ana.png);
+  opacity: 0.8;
+  border-radius: 20px;
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+.mini-card-2 a {
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
 }
 .max {
   width: 753px;
   height: 420px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-image: url(../assets/deal-zabo.png);
-}
-.max h4 {
-  text-align: center;
+  opacity: 0.8;
+  border-radius: 20px;
+  color: white;
+  font-size: 2.5rem;
+  font-weight: 700;
 }
 .max a {
-  text-align: center;
-} */
+  text-decoration: none;
+  color: white;
+  font-size: 1.75rem;
+  font-weight: 600;
+}
 
 /* join the bunch styles */
 
