--- a/styles/style.css
+++ b/styles/style.css
@@ -278,3 +278,81 @@
   gap: 24px;
   margin-bottom: 212px;
 }
+
+/* responsive design for mobile screen */
+
+@media screen and (max-width: 576px) {
+  /* header section */
+
+  .nav-display-none {
+    display: none;
+  }
+  .hero {
+    flex-wrap: wrap-reverse;
+  }
+  /* our plants section */
+  .our-plant-images {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* flowers & plant lover section */
+  .plant-lover {
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    height: 100%;
+    margin-bottom: 100px;
+  }
+  .plant-contents img {
+    display: none;
+  }
+
+  /* latest deal section */
+  .deal-contents {
+    justify-content: center;
+  }
+  .deal-flex {
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+  }
+  .max {
+    width: 367px;
+    height: 200px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../assets/deal-zabo.png);
+    opacity: 0.8;
+    border-radius: 20px;
+    color: white;
+    font-size: 1.25rem;
+    font-weight: 700;
+  }
+  .mini-card-2 {
+    border-radius: 0;
+  }
+
+  /* join the colorful section */
+  .join-section {
+    align-items: center;
+    align-content: center;
+  }
+  .form {
+    align-items: center;
+    flex-direction: row;
+  }
+  #email {
+    width: 250px;
+  }
+
+  /* footer section */
+  .footer {
+    flex-direction: column;
+    align-items: baseline;
+    margin-left: 20px;
+  }
+}
